# knight

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.json.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
docs/: architecture.md  bugs.md  cli.md  core.md  pending.md  progress.md
docs/agents/: context.md
docs/memory/: current-state.md  decisions.md  open-issues.md  project-memory.md
experimental/agent/: README.md  graph.py
experimental/db/: __init__.py  backend.py  config_store.py  engine.py  schema.py  session_store.py  state_store.py
experimental/scripts/: drop_db.py  init_db.py
knight/agents/: __init__.py  config.py  graph.py  llm.py  models.py  plan_extension.ts  prompt.py  runtime_config.py  service.py  state.py  tools.py
knight/api/: __init__.py  app.py  config.py
knight/api/routers/: github.py  health.py  webhooks.py
knight/daemon/: poller.py
knight/data/: pi_provider_map.json
knight/models/api/: health.py  webhook.py
knight/runtime/: __init__.py  authorship.py  command_runner.py  filesystem.py  github.py  github_app.py  locking.py  logging_config.py  repository_identity.py  sandbox.py  worktree.py
knight/utils/db/: backend.py  bootstrap.py  schema.py  session_store.py
knight/utils/local/: config_store.py  session_store.py  state_store.py
knight/worker/: __init__.py  celery_app.py  commit_message.py  config.py  config_store.py  git_ops.py  github_notifications.py  pr_description.py  producer.py  runtime.py  state_store.py
knight/worker/tasks/: __init__.py  dlq_task.py  notifications.py  plan_mode.py  run_agent_task.py
scripts/: drop_db.sql  init_db.sql
(+4 files in other folders)
