[project]
name = "knight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]",
    "fastapi[standard]",
    "langchain",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-anthropic",
    "langgraph",
    "pydantic",
    "pydantic-settings",
    "psycopg[binary]",
    "sqlalchemy",
    "pymysql",
    "python-tds",
    "requests",
    "markdownify",
    "httpx",
    "pyjwt[crypto]",
]
