[project]
name = "knight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.135.3",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.15",
    "langchain-anthropic>=1.4.1",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.49",
    "pymysql>=1.1.2",
    "python-tds>=1.17.1",
    "requests>=2.33.1",
    "markdownify>=1.2.2",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.12.1",
]
